[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/player/rockRigid.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.8
bounce = 0.5

[sub_resource type="CapsuleShape" id=2]
radius = 0.29
height = 0.530789

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0.74902, 1 )
metallic_specular = 0.0
roughness = 0.68

[sub_resource type="SpatialMaterial" id=4]
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id=5]
surfaces/0 = {
"aabb": AABB( -0.858293, -0.858293, -0.970494, 1.71659, 1.71659, 1.8288 ),
"array_data": PoolByteArray( 49, 56, 188, 62, 49, 56, 188, 190, 30, 185, 91, 63, 12, 12, 125, 0, 0, 126, 244, 127, 36, 55, 182, 49, 49, 56, 188, 62, 6, 44, 6, 63, 48, 169, 51, 63, 12, 12, 125, 0, 0, 126, 244, 127, 156, 56, 182, 49, 49, 56, 188, 190, 49, 56, 188, 62, 30, 185, 91, 63, 12, 12, 125, 0, 0, 126, 244, 127, 109, 56, 146, 44, 49, 56, 188, 190, 49, 56, 188, 190, 30, 185, 91, 63, 12, 12, 125, 0, 255, 126, 244, 127, 36, 55, 146, 44, 192, 127, 45, 63, 118, 85, 12, 191, 48, 56, 188, 190, 125, 241, 245, 0, 15, 126, 0, 127, 77, 54, 219, 54, 30, 185, 91, 63, 92, 7, 83, 62, 49, 56, 188, 190, 125, 241, 245, 0, 15, 126, 1, 127, 61, 56, 219, 54, 30, 185, 91, 63, 49, 56, 188, 62, 49, 56, 188, 62, 125, 241, 245, 0, 15, 126, 0, 127, 109, 56, 36, 53, 30, 185, 91, 63, 49, 56, 188, 190, 49, 56, 188, 62, 125, 241, 245, 0, 15, 126, 255, 127, 36, 55, 36, 53, 49, 56, 188, 62, 30, 185, 91, 63, 49, 56, 188, 190, 231, 123, 242, 0, 132, 231, 4, 127, 146, 57, 219, 54, 49, 56, 188, 190, 100, 64, 36, 63, 211, 148, 21, 191, 231, 123, 242, 0, 132, 230, 0, 127, 109, 58, 92, 55, 49, 191, 233, 190, 158, 245, 68, 63, 49, 56, 188, 62, 231, 123, 242, 0, 132, 231, 5, 127, 143, 58, 45, 53, 252, 192, 47, 62, 32, 185, 91, 63, 115, 159, 167, 62, 231, 123, 242, 0, 132, 232, 11, 127, 146, 57, 36, 53, 30, 185, 91, 191, 49, 143, 5, 190, 49, 56, 188, 62, 129, 0, 0, 0, 0, 126, 0, 127, 178, 55, 109, 59, 30, 185, 91, 191, 49, 56, 188, 62, 49, 56, 188, 62, 129, 0, 0, 0, 0, 127, 0, 127, 109, 56, 109, 59, 30, 185, 91, 191, 49, 56, 188, 62, 49, 56, 188, 190, 129, 0, 0, 0, 0, 126, 0, 127, 109, 56, 146, 58, 30, 185, 91, 191, 49, 56, 188, 190, 49, 56, 188, 190, 129, 0, 0, 0, 0, 126, 0, 127, 36, 55, 146, 58, 49, 56, 188, 190, 49, 56, 188, 190, 30, 185, 91, 191, 249, 7, 130, 0, 2, 126, 7, 127, 36, 55, 109, 57, 53, 223, 217, 190, 188, 35, 92, 62, 24, 7, 102, 191, 249, 7, 130, 0, 245, 126, 8, 127, 109, 56, 109, 57, 49, 56, 188, 62, 49, 56, 188, 62, 30, 185, 91, 191, 249, 7, 130, 0, 5, 126, 7, 127, 109, 56, 146, 56, 107, 215, 127, 62, 181, 185, 135, 190, 75, 114, 120, 191, 249, 7, 130, 0, 22, 124, 6, 127, 36, 55, 146, 56, 49, 56, 188, 190, 30, 185, 91, 191, 49, 56, 188, 62, 165, 195, 61, 0, 73, 153, 4, 127, 73, 50, 36, 53, 49, 56, 188, 190, 49, 56, 188, 190, 30, 185, 91, 63, 165, 195, 61, 0, 73, 153, 4, 127, 73, 50, 0, 52, 30, 185, 91, 191, 49, 143, 5, 190, 49, 56, 188, 62, 165, 195, 61, 0, 73, 153, 4, 127, 10, 47, 17, 53, 49, 56, 188, 190, 49, 56, 188, 62, 30, 185, 91, 63, 183, 73, 73, 0, 0, 89, 167, 127, 109, 56, 146, 44, 49, 191, 233, 190, 158, 245, 68, 63, 49, 56, 188, 62, 183, 73, 73, 0, 0, 89, 167, 127, 229, 56, 125, 43, 30, 185, 91, 191, 49, 56, 188, 62, 49, 56, 188, 62, 183, 73, 73, 0, 0, 89, 167, 127, 109, 56, 0, 0, 49, 56, 188, 190, 30, 185, 91, 191, 49, 56, 188, 190, 183, 183, 183, 0, 89, 167, 0, 127, 73, 50, 219, 54, 30, 185, 91, 191, 49, 56, 188, 190, 49, 56, 188, 190, 183, 183, 183, 0, 89, 167, 0, 127, 0, 48, 219, 54, 49, 56, 188, 190, 49, 56, 188, 190, 30, 185, 91, 191, 183, 183, 183, 0, 89, 167, 0, 127, 73, 50, 0, 56, 49, 56, 188, 190, 100, 64, 36, 63, 211, 148, 21, 191, 184, 67, 178, 0, 243, 155, 182, 129, 217, 56, 109, 57, 53, 223, 217, 190, 188, 35, 92, 62, 24, 7, 102, 191, 184, 67, 178, 0, 243, 155, 182, 129, 0, 57, 109, 57, 30, 185, 91, 191, 49, 56, 188, 62, 49, 56, 188, 190, 184, 67, 178, 0, 243, 155, 182, 129, 109, 56, 0, 58, 49, 56, 188, 62, 30, 185, 91, 191, 49, 56, 188, 62, 73, 183, 73, 0, 89, 89, 0, 127, 219, 52, 36, 53, 30, 185, 91, 63, 49, 56, 188, 190, 49, 56, 188, 62, 73, 183, 73, 0, 89, 89, 0, 127, 0, 54, 36, 53, 49, 56, 188, 62, 49, 56, 188, 190, 30, 185, 91, 63, 73, 183, 73, 0, 89, 89, 0, 127, 219, 52, 0, 52, 252, 192, 47, 62, 32, 185, 91, 63, 115, 159, 167, 62, 65, 95, 51, 0, 127, 0, 0, 129, 0, 57, 182, 49, 49, 56, 188, 62, 6, 44, 6, 63, 48, 169, 51, 63, 65, 95, 51, 0, 127, 0, 0, 129, 0, 57, 182, 49, 30, 185, 91, 63, 49, 56, 188, 62, 49, 56, 188, 62, 65, 95, 51, 0, 127, 0, 0, 129, 109, 56, 0, 52, 49, 56, 188, 62, 30, 185, 91, 191, 49, 56, 188, 190, 68, 188, 175, 0, 89, 89, 0, 127, 219, 52, 219, 54, 107, 215, 127, 62, 181, 185, 135, 190, 75, 114, 120, 191, 68, 188, 175, 0, 89, 89, 0, 127, 219, 52, 0, 56, 192, 127, 45, 63, 118, 85, 12, 191, 48, 56, 188, 190, 68, 188, 175, 0, 89, 89, 0, 127, 148, 53, 219, 54, 49, 56, 188, 62, 30, 185, 91, 63, 49, 56, 188, 190, 86, 65, 191, 0, 127, 0, 0, 127, 0, 57, 219, 54, 30, 185, 91, 63, 92, 7, 83, 62, 49, 56, 188, 190, 86, 65, 191, 0, 127, 0, 0, 127, 239, 56, 251, 54, 49, 56, 188, 62, 49, 56, 188, 62, 30, 185, 91, 191, 86, 65, 191, 0, 127, 0, 0, 127, 109, 56, 0, 56, 49, 56, 188, 190, 30, 185, 91, 191, 49, 56, 188, 190, 158, 177, 12, 0, 79, 158, 2, 127, 73, 50, 219, 54, 49, 56, 188, 190, 30, 185, 91, 191, 49, 56, 188, 62, 158, 177, 12, 0, 79, 158, 3, 127, 73, 50, 36, 53, 30, 185, 91, 191, 49, 143, 5, 190, 49, 56, 188, 62, 158, 177, 12, 0, 79, 158, 2, 127, 10, 47, 17, 53, 30, 185, 91, 191, 49, 56, 188, 190, 49, 56, 188, 190, 158, 177, 12, 0, 79, 158, 1, 127, 0, 48, 219, 54, 49, 56, 188, 190, 49, 56, 188, 190, 30, 185, 91, 63, 167, 0, 89, 0, 0, 126, 0, 127, 36, 55, 0, 60, 49, 56, 188, 190, 49, 56, 188, 62, 30, 185, 91, 63, 167, 0, 89, 0, 0, 127, 0, 127, 109, 56, 0, 60, 30, 185, 91, 191, 49, 56, 188, 62, 49, 56, 188, 62, 167, 0, 89, 0, 0, 126, 0, 127, 109, 56, 109, 59, 30, 185, 91, 191, 49, 143, 5, 190, 49, 56, 188, 62, 167, 0, 89, 0, 0, 126, 0, 127, 178, 55, 109, 59, 49, 191, 233, 190, 158, 245, 68, 63, 49, 56, 188, 62, 178, 99, 245, 0, 99, 78, 0, 127, 229, 56, 109, 59, 49, 56, 188, 190, 100, 64, 36, 63, 211, 148, 21, 191, 178, 99, 245, 0, 99, 78, 255, 127, 223, 56, 81, 58, 30, 185, 91, 191, 49, 56, 188, 62, 49, 56, 188, 190, 178, 99, 245, 0, 99, 78, 0, 127, 109, 56, 146, 58, 30, 185, 91, 191, 49, 56, 188, 62, 49, 56, 188, 62, 178, 99, 245, 0, 99, 78, 1, 127, 109, 56, 109, 59, 53, 223, 217, 190, 188, 35, 92, 62, 24, 7, 102, 191, 162, 250, 172, 0, 251, 126, 253, 127, 109, 56, 109, 57, 49, 56, 188, 190, 49, 56, 188, 190, 30, 185, 91, 191, 162, 250, 172, 0, 250, 126, 253, 127, 36, 55, 109, 57, 30, 185, 91, 191, 49, 56, 188, 190, 49, 56, 188, 190, 162, 250, 172, 0, 251, 126, 253, 127, 36, 55, 146, 58, 30, 185, 91, 191, 49, 56, 188, 62, 49, 56, 188, 190, 162, 250, 172, 0, 251, 126, 252, 127, 109, 56, 146, 58, 49, 56, 188, 62, 30, 185, 91, 191, 49, 56, 188, 190, 0, 166, 167, 0, 126, 9, 246, 127, 219, 52, 219, 54, 49, 56, 188, 190, 30, 185, 91, 191, 49, 56, 188, 190, 0, 166, 167, 0, 126, 0, 0, 127, 73, 50, 219, 54, 49, 56, 188, 190, 49, 56, 188, 190, 30, 185, 91, 191, 0, 166, 167, 0, 125, 11, 244, 127, 73, 50, 0, 56, 107, 215, 127, 62, 181, 185, 135, 190, 75, 114, 120, 191, 0, 166, 167, 0, 123, 20, 235, 127, 219, 52, 0, 56, 49, 56, 188, 190, 100, 64, 36, 63, 211, 148, 21, 191, 252, 83, 161, 0, 8, 95, 83, 127, 217, 56, 109, 57, 49, 56, 188, 62, 30, 185, 91, 63, 49, 56, 188, 190, 252, 83, 161, 0, 0, 95, 83, 127, 0, 57, 146, 56, 49, 56, 188, 62, 49, 56, 188, 62, 30, 185, 91, 191, 252, 83, 161, 0, 5, 95, 83, 127, 109, 56, 146, 56, 53, 223, 217, 190, 188, 35, 92, 62, 24, 7, 102, 191, 252, 83, 161, 0, 14, 95, 83, 127, 109, 56, 109, 57, 30, 185, 91, 63, 92, 7, 83, 62, 49, 56, 188, 190, 93, 243, 172, 0, 26, 123, 9, 127, 61, 56, 219, 54, 192, 127, 45, 63, 118, 85, 12, 191, 48, 56, 188, 190, 93, 243, 172, 0, 23, 124, 5, 127, 77, 54, 219, 54, 107, 215, 127, 62, 181, 185, 135, 190, 75, 114, 120, 191, 93, 243, 172, 0, 26, 123, 10, 127, 36, 55, 146, 56, 49, 56, 188, 62, 49, 56, 188, 62, 30, 185, 91, 191, 93, 243, 172, 0, 30, 122, 14, 127, 109, 56, 146, 56, 49, 56, 188, 62, 30, 185, 91, 191, 49, 56, 188, 62, 89, 167, 0, 0, 89, 89, 0, 127, 219, 52, 36, 53, 49, 56, 188, 62, 30, 185, 91, 191, 49, 56, 188, 190, 89, 167, 0, 0, 89, 89, 0, 127, 219, 52, 219, 54, 192, 127, 45, 63, 118, 85, 12, 191, 48, 56, 188, 190, 89, 167, 0, 0, 89, 89, 0, 127, 77, 54, 219, 54, 30, 185, 91, 63, 49, 56, 188, 190, 49, 56, 188, 62, 89, 167, 0, 0, 89, 89, 0, 127, 36, 55, 36, 53, 49, 56, 188, 62, 30, 185, 91, 63, 49, 56, 188, 190, 88, 91, 1, 0, 165, 88, 253, 127, 146, 57, 219, 54, 252, 192, 47, 62, 32, 185, 91, 63, 115, 159, 167, 62, 88, 91, 1, 0, 165, 88, 251, 127, 146, 57, 36, 53, 30, 185, 91, 63, 49, 56, 188, 62, 49, 56, 188, 62, 88, 91, 1, 0, 165, 88, 254, 127, 109, 56, 36, 53, 30, 185, 91, 63, 92, 7, 83, 62, 49, 56, 188, 190, 88, 91, 1, 0, 165, 88, 0, 127, 61, 56, 219, 54, 49, 56, 188, 62, 6, 44, 6, 63, 48, 169, 51, 63, 82, 9, 96, 0, 0, 126, 245, 127, 156, 56, 182, 49, 49, 56, 188, 62, 49, 56, 188, 190, 30, 185, 91, 63, 82, 9, 96, 0, 4, 125, 240, 127, 36, 55, 182, 49, 30, 185, 91, 63, 49, 56, 188, 190, 49, 56, 188, 62, 82, 9, 96, 0, 0, 126, 244, 127, 36, 55, 36, 53, 30, 185, 91, 63, 49, 56, 188, 62, 49, 56, 188, 62, 82, 9, 96, 0, 250, 126, 249, 127, 109, 56, 36, 53, 49, 56, 188, 190, 30, 185, 91, 191, 49, 56, 188, 62, 0, 167, 89, 0, 126, 0, 0, 127, 73, 50, 36, 53, 49, 56, 188, 62, 30, 185, 91, 191, 49, 56, 188, 62, 0, 167, 89, 0, 127, 0, 0, 127, 219, 52, 36, 53, 49, 56, 188, 62, 49, 56, 188, 190, 30, 185, 91, 63, 0, 167, 89, 0, 126, 0, 0, 127, 219, 52, 0, 52, 49, 56, 188, 190, 49, 56, 188, 190, 30, 185, 91, 63, 0, 167, 89, 0, 127, 0, 0, 127, 73, 50, 0, 52, 252, 192, 47, 62, 32, 185, 91, 63, 115, 159, 167, 62, 251, 95, 83, 0, 228, 80, 162, 127, 0, 57, 182, 49, 49, 191, 233, 190, 158, 245, 68, 63, 49, 56, 188, 62, 251, 95, 83, 0, 252, 83, 161, 127, 229, 56, 125, 43, 49, 56, 188, 190, 49, 56, 188, 62, 30, 185, 91, 63, 251, 95, 83, 0, 233, 81, 162, 127, 109, 56, 146, 44, 49, 56, 188, 62, 6, 44, 6, 63, 48, 169, 51, 63, 251, 95, 83, 0, 210, 76, 166, 127, 156, 56, 182, 49, 49, 56, 188, 190, 30, 185, 91, 191, 49, 56, 188, 190, 0, 129, 0, 0, 127, 0, 0, 127, 73, 50, 219, 54, 49, 56, 188, 62, 30, 185, 91, 191, 49, 56, 188, 190, 0, 129, 0, 0, 127, 0, 0, 127, 219, 52, 219, 54, 49, 56, 188, 62, 30, 185, 91, 191, 49, 56, 188, 62, 0, 129, 0, 0, 127, 0, 0, 127, 219, 52, 36, 53, 49, 56, 188, 190, 30, 185, 91, 191, 49, 56, 188, 62, 0, 129, 0, 0, 127, 0, 0, 127, 73, 50, 36, 53 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 23, 0, 25, 0, 24, 0, 26, 0, 28, 0, 27, 0, 29, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 35, 0, 37, 0, 36, 0, 38, 0, 40, 0, 39, 0, 41, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 56, 0, 59, 0, 58, 0, 60, 0, 62, 0, 61, 0, 60, 0, 63, 0, 62, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0, 72, 0, 74, 0, 73, 0, 72, 0, 75, 0, 74, 0, 76, 0, 78, 0, 77, 0, 76, 0, 79, 0, 78, 0, 80, 0, 82, 0, 81, 0, 80, 0, 83, 0, 82, 0, 84, 0, 86, 0, 85, 0, 84, 0, 87, 0, 86, 0, 88, 0, 90, 0, 89, 0, 88, 0, 91, 0, 90, 0, 92, 0, 94, 0, 93, 0, 92, 0, 95, 0, 94, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 132,
"material": SubResource( 4 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 96
}

[node name="rockRigid" type="RigidBody"]
mass = 30.0
physics_material_override = SubResource( 1 )
gravity_scale = 2.0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="rockMeshCont" type="Spatial" parent="."]

[node name="rockMesh" type="MeshInstance" parent="rockMeshCont"]
transform = Transform( 0.297, 0, 0, 0, 0.648, 0, 0, 0, 0.31, 0, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 5 )
material/0 = null

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
